// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should successfully create a measurement component 1`] = `
<div
  class="measurement css-0"
  data-testid="measurement"
  data-theme="light"
>
  <div
    class="measurement-content css-1syq16t"
    data-theme="light"
  >
    <p
      class="chakra-text css-93tr2s"
      data-theme="light"
    >
      measurementInfoText
    </p>
    <div
      class="chakra-form-control css-1m7igkt"
      data-theme="light"
      role="group"
    >
      <div
        class="chakra-stack css-1sgivba"
        data-theme="light"
      >
        <label
          class="chakra-form__label css-oe420r"
          data-theme="light"
          for="field-:r0:"
          id="field-:r0:-label"
        >
          measurementLabel
        </label>
        <div
          class="chakra-select__wrapper css-42b2qy"
          data-theme="light"
        >
          <select
            class="chakra-select measurement-select css-161pkch"
            data-theme="light"
            id="field-:r0:"
          >
            <option
              value="distance"
            >
              distance
            </option>
            <option
              value="area"
            >
              area
            </option>
          </select>
          <div
            class="chakra-select__icon-wrapper css-iohxn1"
            data-theme="light"
          >
            <svg
              aria-hidden="true"
              class="chakra-select__icon"
              focusable="false"
              role="presentation"
              style="width: 1em; height: 1em; color: currentcolor;"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <button
      class="chakra-button measurment-delete-button css-14p1tvq"
      data-theme="light"
      type="button"
    >
      deleteMeasurementLabel
    </button>
  </div>
</div>
`;

exports[`should successfully create a measurement component with additional css classes and box properties 1`] = `
<div
  class="measurement test css-0"
  data-testid="measurement"
  data-theme="light"
>
  <div
    class="measurement-content css-1syq16t"
    data-theme="light"
  >
    <p
      class="chakra-text css-93tr2s"
      data-theme="light"
    >
      measurementInfoText
    </p>
    <div
      class="chakra-form-control css-1m7igkt"
      data-theme="light"
      role="group"
    >
      <div
        class="chakra-stack css-1sgivba"
        data-theme="light"
      >
        <label
          class="chakra-form__label css-oe420r"
          data-theme="light"
          for="field-:r1:"
          id="field-:r1:-label"
        >
          measurementLabel
        </label>
        <div
          class="chakra-select__wrapper css-42b2qy"
          data-theme="light"
        >
          <select
            class="chakra-select measurement-select css-161pkch"
            data-theme="light"
            id="field-:r1:"
          >
            <option
              value="distance"
            >
              distance
            </option>
            <option
              value="area"
            >
              area
            </option>
          </select>
          <div
            class="chakra-select__icon-wrapper css-iohxn1"
            data-theme="light"
          >
            <svg
              aria-hidden="true"
              class="chakra-select__icon"
              focusable="false"
              role="presentation"
              style="width: 1em; height: 1em; color: currentcolor;"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <button
      class="chakra-button measurment-delete-button css-14p1tvq"
      data-theme="light"
      type="button"
    >
      deleteMeasurementLabel
    </button>
  </div>
</div>
`;
